#pragma once
#include "../include/character/Character.h"

class Archer : public Character {
public:
    explicit Archer(const std::string &name); // 构造函数
};
