#pragma once
#include "Character.h"

class Mage : public Character {
public:
    explicit Mage(const std::string &name); // 构造函数
};
