#pragma once
#include "Character.h"

class Warrior : public Character {
public:
    explicit Warrior(const std::string &name); // 构造函数
};
