//
// Created by LEE32 on 2025/12/30.
//

#ifndef MY_RPG_GAME_DAMAGETYPE_H
#define MY_RPG_GAME_DAMAGETYPE_H

/**
 * @brief 技能伤害类型
 */
enum class DamageType {
    Physical,
    Magical,
    TrueDamage
};


#endif //MY_RPG_GAME_DAMAGETYPE_H