//
// Created by LEE32 on 2026/1/4.
//

#ifndef MY_RPG_GAME_EFFECTTYPE_H
#define MY_RPG_GAME_EFFECTTYPE_H

enum class EffectType {
    Positive,
    Negative,
    Neutral
};

#endif //MY_RPG_GAME_EFFECTTYPE_H
