//
// Created by LEE32 on 2026/1/5.
//

#ifndef MY_RPG_GAME_EQUIPSLOT_H
#define MY_RPG_GAME_EQUIPSLOT_H

enum class EquipSlot {
    Helmet,
    Chest,
    Legs,
    Boots,
    Hand
};

#endif //MY_RPG_GAME_EQUIPSLOT_H