//
// Created by LEE32 on 2026/1/4.
//

#ifndef MY_RPG_GAME_MODIFYMODE_H
#define MY_RPG_GAME_MODIFYMODE_H

enum class ModifyMode {
    Add, // 加属性
    Multiply, // 属性乘倍率
    Override // 属性直接改写
};

#endif //MY_RPG_GAME_MODIFYMODE_H