//
// Created by LEE32 on 2026/1/4.
//

#ifndef MY_RPG_GAME_STATMODIFIER_H
#define MY_RPG_GAME_STATMODIFIER_H

enum class StatType {
    Attack,
    Mana,
    MaxMana,
    Health,
    MaxHealth,
    PhysicalDefense,
    MagicalDefense,
};

#endif //MY_RPG_GAME_STATMODIFIER_H